--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -49,7 +49,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
-        <revision>2.15.0</revision>
+        <revision>2.15.0.1</revision>
         <!-- Ignite version will be substituted with the flatten-maven-plugin and used as
             a version dependency for Ignite extensions. -->
         <ignite.version>${revision}</ignite.version>
@@ -204,6 +204,19 @@
             <archive>https://mail-archives.apache.org/mod_mbox/ignite-user/</archive>
         </mailingList>
     </mailingLists>
+
+    <distributionManagement>
+        <repository>
+            <id>redsoft.nexus.releases.repo</id>
+            <name>Release repository</name>
+            <url>http://nexus.red-soft.biz/repository/releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>redsoft.nexus.snapshot.repo</id>
+            <name>Snapshot repository</name>
+            <url>http://nexus.red-soft.biz/repository/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
 
     <issueManagement>
         <system>jira</system>
